--- a/package.json
+++ b/package.json
@@ -11,23 +11,27 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@mindinventory/react-native-tab-bar-interaction": "^3.0.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "d3-shape": "^3.2.0",
     "expo": "~52.0.23",
+    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-curved-bottom-bar": "^3.4.0",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
-    "expo-splash-screen": "~0.29.18"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
