--- a/app.json
+++ b/app.json
@@ -23,6 +23,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "e728d52a-398c-4645-9347-0d769b63abd4"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/e728d52a-398c-4645-9347-0d769b63abd4"
     }
   }
 }
