--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-curved-bottom-bar": "^3.4.0",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-svg": "15.8.0",
